# acp-hub

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  SECURITY.md  SUPPORT.md  deny.toml  rust-toolchain.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/DISCUSSION_TEMPLATE/: ideas.yml  q-a.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.grok/skills/acp-hub/: SKILL.md
.grok/skills/acp-hub/references/: cheatsheet.md
adapters/codex/: README.md  agents.json
adapters/cursor/: README.md  adapter-test.mjs  adapter.js  adapter.mjs  agents.json  cursor-adapter.cmd  debug-test.js  echo-test.js  ide-list.mjs  list-check.mjs  load-check.mjs  load-out.txt  probe.mjs  smoke-test.mjs
adapters/grok/: README.md  adapter-test.mjs  adapter.mjs  agents.json
adapters/omp/: README.md  agents.json
crates/cli/: Cargo.toml  LICENSE-MIT
crates/cli/src/: args.rs  cli_tests.rs  commands.rs  main.rs  mcp.rs  mcp_tests.rs  output.rs
crates/cli/tests/: cli_contract.rs  cli_phase1_smoke.rs  mcp_smoke.rs
crates/hub/: Cargo.toml
crates/hub/src/: acp.rs  bounded_transport.rs  callbacks.rs  conductor.rs  daemon.rs  endpoint.rs  error.rs  hub.rs  lib.rs  rpc.rs  runtime.rs  store.rs  transport.rs
crates/hub/src/acp/: capabilities.rs  command_loop.rs  session_list.rs  tests.rs
crates/hub/src/bounded_transport/: flow.rs  tests.rs  wire.rs
crates/hub/src/callbacks/: capture.rs  connection.rs  permission_filesystem.rs  resolve_tests.rs  terminal.rs  tests.rs
crates/hub/src/callbacks/tests/: capture.rs  permission_filesystem.rs  session_creation.rs  terminal.rs
crates/hub/src/daemon/: rpc_io.rs
crates/hub/src/daemon/rpc_io/: lifecycle_tests.rs  protocol_tests.rs
crates/hub/src/hub/: client.rs  conversation.rs  dispatch.rs  lifecycle.rs  prompt.rs  registry.rs  state.rs  types.rs
crates/hub/src/hub/tests/: cancel.rs  client.rs  mod.rs  operation.rs  publication.rs  registry.rs  replay.rs  support.rs
crates/hub/src/rpc/: error_data.rs  tests.rs
crates/hub/src/store/: conversation_policy.rs  lifecycle.rs  paging.rs  replay.rs  snapshots.rs
crates/hub/tests/: concurrency.rs  daemon_idle.rs  phase1_operator_ux.rs  protocol_surface.rs  proxies.rs  registry.rs  store.rs  store_atomicity.rs  testy_full_flow.rs
crates/hub/tests/store/: basic.rs  paging.rs  replay_recovery.rs
crates/integration-tests/: Cargo.toml
crates/integration-tests/src/: lib.rs
crates/integration-tests/tests/: callback_roundtrip.rs  capture_failure.rs  concurrency.rs  protocol_lifecycle.rs  protocol_surface.rs  proxies.rs  sdk_probe.rs  testy_full_flow.rs
doc/dev/: bdd.md  design.md  impl_plan.md  spec.md  tdd.md  ux-rebalance-2026-07-24-review.md  ux-rebalance-2026-07-24.md  ux-walkthrough-feedback-2026-07-24.md
doc/dev/cursor-adapter/: e2e-investigation-2026-07-24.md  qa-investigation-2026-07-24.md  regression-feedback-2026-07-24.md  spec.md
doc/dev/grok-adapter/: spec.md
doc/maintenance/: complete-task-plan-2026-07-18.md  continuation-handoff-2026-07-18.md  final-completion-summary-2026-07-19.md
doc/research/from-chatgpt/acp_discussion_docs/: acp_plugin_hub_discussion_transcript_2.md  openab_acp_discussion_transcript.md
doc/research/omp-vs-acp-hub-2026-07-24/: 00-WORKFLOW.md  01-omp-subagents-task-agents.md  02-acp-hub-architecture.md  03-history-attribution.md  04-comparison-matrix.md  05-findings-summary.md  06-omp-ux-strengths.md
doc/research/omp-vs-acp-hub-2026-07-24/raw/: omp-acp-surface.md  openab-session-pool-notes.md
doc/review/: complete-review-book-2026-07-18.md  complete-review-book-2026-07-21.md
doc/roles/: implementer.md
doc/ssot/agent-managed/: COMPLIANCE.md  CONVERGENCE.md  IMPLEMENTATION-PLAN.md  INDEX.md  OPERATOR-UX-CHARTER.md  OPERATOR-UX-PHASE1-CONTRACT.md  OPERATOR-UX-SYSTEM.md  PHASE1-SHIP.md  PLAN.md  README.md  WORKFLOW.md
doc/ssot/agent-managed/pillars/: Product-UX.md
doc/ssot/dev-principles/: 实现规划原则.md
doc/ssot/pillars/: README.md  TechSel.md
scripts/ci/: check-crate-versions.ps1  check-crate-versions.sh  check-packaged-consumer.ps1  check-packaged-consumer.sh  publish-crate.sh
