[workspace]
resolver = "3"
members = ["crates/hub", "crates/cli"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/RatmmmhSquishyRat/acp-hub"

[workspace.dependencies]
# ACP SDK — all unified to one git rev so the test crate's types (Testy, ConnectTo<Client>)
# line up with the runtime crates. agent-client-protocol-test is publish=false (not on
# crates.io), and pulling it via git transitively resolves its sibling path deps to the
# SAME source — so the main crates must come from git too, or we'd get two distinct
# `Client`/`Agent`/`schema` instances and trait impls would not line up.
agent-client-protocol = { git = "https://github.com/agentclientprotocol/rust-sdk", rev = "8745852aa7b434b6df347343be605fc8b1b56911" }
agent-client-protocol-http = { git = "https://github.com/agentclientprotocol/rust-sdk", rev = "8745852aa7b434b6df347343be605fc8b1b56911", features = ["client"] }
agent-client-protocol-conductor = { git = "https://github.com/agentclientprotocol/rust-sdk", rev = "8745852aa7b434b6df347343be605fc8b1b56911" }
agent-client-protocol-test = { git = "https://github.com/agentclientprotocol/rust-sdk", rev = "8745852aa7b434b6df347343be605fc8b1b56911" }

# MCP facade
rmcp = { version = "2.1", features = ["server", "transport-io", "macros", "schemars"] }
schemars = "1"
# HTTP (for HttpClient header injection on http/ws transports)
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors
thiserror = "2"
anyhow = "1"
# Sync locks (project convention: parking_lot for non-async guards).
parking_lot = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Storage
rusqlite = { version = "0.40", features = ["bundled"] }

# Misc
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
interprocess = { version = "2", features = ["tokio"] }
fd-lock = "4"
