[workspace]
resolver = "3"
members = ["crates/hub", "crates/cli", "crates/integration-tests"]
default-members = ["crates/hub", "crates/cli"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/RatmmmhSquishyRat/acp-hub"
description = "ACP (Agent Client Protocol) client/conductor hub: register AI coding agents, manage conversations, capture history, and search."
keywords = ["acp", "agent", "mcp", "cli", "ai"]
# Default categories for the library crate; CLI overrides with CLI-oriented ones.
categories = ["development-tools"]
homepage = "https://github.com/RatmmmhSquishyRat/acp-hub"
readme = "README.md"

[workspace.dependencies]
# Runtime ACP SDK — crates.io versions (required for publishing).
# Keep these aligned with each other; http is versioned independently in the upstream monorepo.
agent-client-protocol = "0.15.1"
agent-client-protocol-http = { version = "0.1.1", features = ["client"] }
agent-client-protocol-conductor = "0.15.1"
# Unpublished upstream test harness — only used by crates/integration-tests (publish = false).
# Pinned to the same upstream release line as the crates.io deps above.
agent-client-protocol-test = { git = "https://github.com/agentclientprotocol/rust-sdk", rev = "8745852aa7b434b6df347343be605fc8b1b56911" }

rmcp = { version = "1.8", features = ["server", "transport-io", "macros", "schemars"] }
schemars = "1"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
rusqlite = { version = "0.40", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
interprocess = { version = "2", features = ["tokio"] }
fd-lock = "4"
dunce = "1"
libc = "0.2"
serial_test = "3"

# Force local/CI builds to resolve ACP crates from the same git source as
# agent-client-protocol-test, so trait/types line up. Ignored on `cargo publish`
# (published crates only carry version requirements on crates.io).
[patch.crates-io]
agent-client-protocol = { git = "https://github.com/agentclientprotocol/rust-sdk", rev = "8745852aa7b434b6df347343be605fc8b1b56911" }
agent-client-protocol-http = { git = "https://github.com/agentclientprotocol/rust-sdk", rev = "8745852aa7b434b6df347343be605fc8b1b56911" }
agent-client-protocol-conductor = { git = "https://github.com/agentclientprotocol/rust-sdk", rev = "8745852aa7b434b6df347343be605fc8b1b56911" }
