[workspace]
resolver = "3"
members = ["crates/hub", "crates/cli", "crates/integration-tests"]
default-members = ["crates/hub", "crates/cli"]

[workspace.package]
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/RatmmmhSquishyRat/acp-hub"
description = "ACP (Agent Client Protocol) client/conductor hub: register AI coding agents, manage conversations, capture history, and search."
keywords = ["acp", "agent", "mcp", "cli", "ai"]
# Default categories for the library crate; CLI overrides with CLI-oriented ones.
categories = ["development-tools"]
homepage = "https://github.com/RatmmmhSquishyRat/acp-hub"
readme = "README.md"

[workspace.dependencies]
# Runtime ACP SDK — crates.io versions (required for publishing).
# Keep these aligned with each other.
agent-client-protocol = "=1.2.0"
agent-client-protocol-conductor = "=1.2.0"
# Unpublished upstream test harness — only used by crates/integration-tests (publish = false).
# Pinned to the same upstream release line as the crates.io deps above.
agent-client-protocol-test = { git = "https://github.com/agentclientprotocol/rust-sdk", rev = "2c7311cddd89c87aa6385bc3b6b859da230645fd" }

rmcp = { version = "2.2", features = ["server", "transport-io", "macros", "schemars"] }
schemars = "1"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "stream"] }
async-process = "2"
async-tungstenite = { version = "0.34.1", default-features = false, features = ["tokio-rustls-webpki-roots"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
hmac = "0.13"
sha2 = "0.10"
thiserror = "2"
anyhow = "1"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
rusqlite = { version = "0.40", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
interprocess = { version = "2", features = ["tokio"] }
fd-lock = "4"
dunce = "1"
libc = "0.2"
windows-sys = "0.61"
serial_test = "3"
widestring = "1"
tempfile = "3"

# Force local/CI builds to resolve ACP crates from the same git source as
# agent-client-protocol-test, so trait/types line up. Ignored on `cargo publish`
# (published crates only carry version requirements on crates.io).
[patch.crates-io]
agent-client-protocol = { git = "https://github.com/agentclientprotocol/rust-sdk", rev = "2c7311cddd89c87aa6385bc3b6b859da230645fd" }
agent-client-protocol-conductor = { git = "https://github.com/agentclientprotocol/rust-sdk", rev = "2c7311cddd89c87aa6385bc3b6b859da230645fd" }
