[package]
name = "acp-hub-cli"
version = "0.1.3"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories = ["command-line-utilities", "development-tools"]
homepage.workspace = true
readme.workspace = true

[[bin]]
name = "acp-hub"
path = "src/main.rs"

[dependencies]
acp-hub-core = { path = "../hub", version = "0.1.3" }
agent-client-protocol = { workspace = true }
agent-client-protocol-conductor = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
dunce = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
