[package]
name = "acp-hub-core"
version = "0.1.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
readme.workspace = true

[lib]
name = "acp_hub"
path = "src/lib.rs"

[dependencies]
agent-client-protocol = { workspace = true }
agent-client-protocol-http = { workspace = true }
agent-client-protocol-conductor = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
interprocess = { workspace = true }
fd-lock = { workspace = true }
parking_lot = { workspace = true }
dunce = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serial_test = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
