[package]
name = "acp-hub-core"
version = "0.2.1-rc.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
readme.workspace = true

[lib]
name = "acp_hub"
path = "src/lib.rs"

[features]
test-flow-ledger = []

[dependencies]
agent-client-protocol = { workspace = true }
agent-client-protocol-conductor = { workspace = true }
reqwest = { workspace = true }
async-process = { workspace = true }
async-tungstenite = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
interprocess = { workspace = true }
fd-lock = { workspace = true }
parking_lot = { workspace = true }
dunce = { workspace = true }
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
widestring = { workspace = true }
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

[dev-dependencies]
tokio = { workspace = true }
serial_test = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }

