[package]
name = "acp-hub-integration-tests"
version = "0.2.1-rc.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
acp-hub-core = { path = "../hub", version = "0.2.1-rc.1", features = ["test-flow-ledger"] }
agent-client-protocol = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
agent-client-protocol-test = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
tempfile = { workspace = true }
